--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -1,5 +1,11 @@
 .container{
     max-width: 1600px;
+    padding: 0 120px;
     width: 100%;
     margin:0 auto;
+}
+@media only screen and (max-width:1280px){
+    .container{
+        padding: 0 60px;
+    }
 }
