--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,6 +1,15 @@
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
 li{
     list-style: none;
 }
 button{
     border: 0;
+}
+body{
+    background-color: var(--backgrounBody);
+    color: var(--color);
 }
