--- a/sass/index.css
+++ b/sass/index.css
@@ -1,3 +1,15 @@
+:root {
+  --color:#fff;
+  --backgroundHeader:rgba(23, 25, 29, 0.7);
+  --backgrounBody:#111317;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 li {
   list-style: none;
 }
@@ -6,17 +18,118 @@ button {
   border: 0;
 }
 
+body {
+  background-color: var(--backgrounBody);
+  color: var(--color);
+}
+
 .container {
   max-width: 1600px;
+  padding: 0 120px;
   width: 100%;
   margin: 0 auto;
+}
+
+@media only screen and (max-width: 1280px) {
+  .container {
+    padding: 0 60px;
+  }
+}
+.lighted {
+  --color:#000;
+  --backgroundHeader: rgba(23, 25, 29, 0.1);
+  --backgrounBody:#FFF;
+}
+
+.activ_darcmode {
+  background: #5454D4;
+  color: #fff;
+}
+
+.sundark {
+  border: 0;
+  background-color: #fff;
+}
+
+header {
+  background: var(--backgroundHeader);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+  padding: 17px 0 19px 0;
 }
 
 .main-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .nav__list {
   display: flex;
+  gap: 15px;
+}
+.nav__list .nav--item {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.logo {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 50px;
+}
+
+.header_qoshimcha {
+  display: flex;
+  align-items: center;
+}
+
+.header--phone {
+  margin: 0 41px 0 42px;
+}
+.header--phone span {
+  display: block;
+  font-family: "Proxima Nova";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+}
+.header--phone span:nth-child(1) {
+  font-size: 20px;
+  line-height: 24px;
+}
+
+button {
+  background: #6911AD;
+  border-radius: 7px;
+  color: #fff;
+  padding: 12px 21px 14px 21px;
+  font-family: "Proxima Nova";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.darcmode {
+  padding: 2px;
+  display: flex;
+  gap: 6px;
+  background: transparent;
+  border: 1px solid #AAAAAA;
+  border-radius: 40px;
+}
+.darcmode span {
+  padding: 6px;
+  border-radius: 40px;
+  padding: 6.74px 8px;
+}
+.darcmode span:nth-child(2) {
+  padding: 6.74px 6.64px 6.76px 7.75px;
 }/*# sourceMappingURL=index.css.map */
