--- a/sass/_block/_info.scss
+++ b/sass/_block/_info.scss
@@ -11,7 +11,7 @@
                   font-weight: 600;
                   font-size: 50px;
                   line-height: 64px;
-                  color: #000;
+                  // color: #000;
             }
 
             .info-text {
@@ -101,7 +101,6 @@
                   .info-card__text {
                         font-size: 16px !important;
                         line-height: 21px !important;
-         
                   }
             }
       }
