--- a/sass/_block/_info.scss
+++ b/sass/_block/_info.scss
@@ -19,7 +19,7 @@
                   font-size: 18px;
                   line-height: 140%;
                   margin-top: 20px;
-                  color: rgba(0, 0, 0, 0.8);
+                  // color: rgba(0, 0, 0, 0.8);
             }
 
             .info-text:last-child {
