--- a/sass/_block/_darkmode.scss
+++ b/sass/_block/_darkmode.scss
@@ -1,5 +1,6 @@
 .lighted{
     --color:#000;
+    --colorInfo: rgba(0, 0, 0, 0.8);
     --backgroundHeader: rgba(23, 25, 29, 0.1);
     --backgrounBody:#FFF;
 }
