--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,5 +1,6 @@
 :root{
     --color:#fff;
+    --colorInfo:rgba(255, 255, 255, 0.8);
     --backgroundHeader:rgba(23, 25, 29, 0.7);
     --backgrounBody:#111317;
 }
