--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -9,3 +9,18 @@
         padding: 0 60px;
     }
 }
+@media only screen and (max-width:840px){
+    .container{
+        padding: 0 40px;
+    }
+}
+@media only screen and (max-width:500px){
+    .container{
+        padding: 0 30px;
+    }
+}
+@media only screen and (max-width:400px){
+    .container{
+        padding: 0 20px;
+    }
+}
