--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -10,6 +10,10 @@ li{
 button{
     border: 0;
 }
+a{
+    text-decoration: none;
+    color: var(--color);
+}
 body{
     background-color: var(--backgrounBody);
     color: var(--color);
