--- a/sass/_block/_afzallik.scss
+++ b/sass/_block/_afzallik.scss
@@ -64,6 +64,16 @@
 @media only screen and (max-width: 678px) {
       .afzallik{
             padding: 10px 20px;
+            border: 1px solid #fff;
+      }
+      .afzallik-col{
+            margin-top: 20px;
+      }
+      .afzallik-box{
+            margin-top: 20px;
+            max-height: 600px;
+            overflow-y: auto;
+
       }
 }
 
